[tool.poetry]
name = "pyfastjet"
version = "0.1.0"
description = "Fastjet python bindings"
authors = [
    "Raymond Ehlers <raymond.ehlers@cern.ch>",
]
license = "BSD-3-Clause"
# TODO: Include the appropriate files here...
include = [
    "CMakeLists.txt", "cmake/FindFASTJET.cmake",
    # Include everything in the pybind11 folder.
    "pybind11/**/*"
    #"pybind11/*", "pybind11/include/*", "pybind11/pybind11/*", "pybind11/tools/*",
    #"pybind11/include/pybind11/*", "pybind11/include/pybind11/detail/*",
]

[tool.poetry.build]
script = "build.py"
# TODO: For now, we use a generated setup.py so we don't have to copy the files by hand. However, we'll do that later.
#generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.17.4"
awkward1 = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.782"
flake8 = "^3.8.4"
flake8-colors = "^0.1.6"
yamllint = "^1.25.0"
pybind11-stubgen = "^0.8.2"
pre-commit = "^2.7.1"
black = "^20.8b1"
pandas = "^1.1.3"

[tool.isort]
known_standard_library = ["setuptools"]
known_third_party = ["numpy", "pytest"]
known_first_party = []
line_length = 120
# Meaning a grouped grid of imports
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
use_parentheses = true
verbose = true
skip = ["docs/conf.py"]
skip_glob = ".*"

[tool.black]
line-length = 120

[build-system]
# TODO: Remove setuptools and numpy dependencies when other issues are resolved. However, I don't think they're there yet.
requires = ["poetry_core>=1.0.0", "setuptools", "numpy"]
build-backend = "poetry.core.masonry.api"
