[tool.poetry]
name = "pyfastjet"
version = "0.1.0"
description = "Fastjet python bindings"
authors = [
    "Raymond Ehlers <raymond.ehlers@cern.ch>",
]
license = "BSD-3-Clause"
# TODO: Include the appropriate files here...
#       I think the CMake files and the pybind11 files can both be removed.
include = [
    #"CMakeLists.txt", "cmake/FindFASTJET.cmake",
    # Include everything in the pybind11 folder.
    #"pybind11/**/*",
    #"pybind11/*", "pybind11/include/*", "pybind11/pybind11/*", "pybind11/tools/*",
    #"pybind11/include/pybind11/*", "pybind11/include/pybind11/detail/*",
    #"build/*/pyfastjet/*",
    "pyfastjet/*.so",
]
# Exclude the bindings source files themselves, which don't need to be included.
exclude = [
    "pyfastjet/src/*",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.17.4"
awkward1 = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
mypy = "^0.782"
flake8 = "^3.8.4"
flake8-colors = "^0.1.6"
yamllint = "^1.25.0"
pybind11-stubgen = "^0.8.2"
pre-commit = "^2.7.1"
black = "^20.8b1"
pandas = "^1.1.3"

[tool.isort]
known_standard_library = ["setuptools"]
known_third_party = ["numpy", "pytest"]
known_first_party = []
line_length = 120
# Meaning a grouped grid of imports
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
use_parentheses = true
verbose = true
skip = ["docs/conf.py"]
skip_glob = ".*"

[tool.black]
line-length = 120

[build-system]
# Need awkward1 because we explicitly build against it.
# Need setuptools because awkward uses it.
requires = ["poetry_core>=1.0.0", "setuptools", "awkward1>=0.3",]
build-backend = "poetry.core.masonry.api"
